tests/files/type_checker_tests/should_fail/186.cmdr
//Should fail calling builtin with incorrect number of parameters
println "hello".substring(3, 4, 4);
